Modified Cover letter

--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -44,7 +44,7 @@ CFD methodology leader for an open wheel Hill Climb Race car design project
      \begin{itemize}
 	\itemsep -1pt
      	\item Obtained \textbf{33\% efficiency} improvement
-     	\item Process automation \\(\textbf{enhanced productivity by +500\%})
+     	\item CFD workflow automation \\(\textbf{enhanced productivity by +500\%})
      \end{itemize}
 
 \workitem{September 2011 -- July 2012}
