--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -47,17 +47,21 @@ Southampton UK, SO14 3JG
 %----------------------------------------------------------------------------------------
 
 \greetto{Dear Sir or Madam,} % Greeting text
-%\closeline{Yours Faithfull,}
 
+
+\newcommand{\job}{CFD R\&D Engineer}
+\newcommand{\jobref}{}
+\newcommand{\jobweb}{McLaren careers' website}
 
 \nameto{} % Addressee of the letter above the to address
 
 \addrto{
-Altran Italia S.p.A. \\
-Via Triburtina, 1232 \\
-Roma, 00131 (Italia)\\
+McLaren Technology Centre\\
+Chertsey Road,
+Woking (Surrey),\\
+GU21 4YH (UK)\\
 \\
-Job reference: \textbf{Computational Fluid Dynamics (CFD) Engineer}  
+Job reference: \textbf{\job}  
 }
 
 %----------------------------------------------------------------------------------------
@@ -69,28 +73,30 @@ Job reference: \textbf{Computational Fluid Dynamics (CFD) Engineer}
 %	LETTER CONTENT
 %----------------------------------------------------------------------------------------
 
-I am writing this letter in response to the ``Computational Fluid Dynamics (CFD)
-Engineer'' job advert on Altran's website for which I believe I have the appropriate set of skills. 
 
-I am at the end of completing (this November) a PhD on the topic of Large-Eddy-Simulations
-of wings with leading-edge modifications, and I am looking to take this further on my next
-career challenge. During these last three years in the research field, not only have I
-strengthened my scientific background but my also my experience in dealing with industrial
-problems. During the "CFD Surgery" sessions at University of Southampton, students would
-bring CFD related problems they were facing during their last year projects. It was often
-the case that those projects were proposed by companies from different backgrounds. As a
-consequence, this trained me to tackle many different industrial problems as if I was
-working as a CFD consultant.
+I was excited to read about the ``\job'' position recently posted on \jobweb.
+I hope that by the end of these lines you believe as strongly as I do, that I am the
+right fit for the position in question due to the following reasons.
 
-Additionally, as I hope you noticed in my CV, during both my MSc and Bachelors I was
-involved in projects that needed both CAD and CAE tools to be applied. Specially while
-designing the Solar Car in Madrid, I had to build the entire prototype's CAD model in
-CatiaV5 with the necessary parametrisation in order to allow the later aerodynamic
-optimisation.
+In F1 aerodynamics, managing vortical flow structures is capital. As a post-graduate
+researcher at University of Southampton I have spent the past 4 years analysing in depth
+flows of such nature. My work is about wings with an undulated leading edge, which I
+believe have been used in the past in the rear wing section of the MP4-29 to reduce drag.
+I believe that I could bring in valuable knowledge in this matter given that I have
+dedicated countless hours to its investigation.
 
-Thank you for your time and consideration and please feel free to contact me, or visit my
-linkedin profile (\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt})
-if you need any more details.
+I hope you noticed in my CV that I fulfil all the necessary requirements since I used
+extensively commercial CFD packages to analyse in the past and also have experience in developing CFD
+codes in Fortran90 as well as post-processing tools both in Java and Python.
+
+Finally I would like to express that although the research experience has been very
+rewarding, I feel that due to my competitive character, I would much rather continue
+developing my career in the fast-paced and team-based working environment of a F1 team.
+
+Thank you for your time and consideration and please feel free to contact me at any time,
+or visit my linkedin profile
+(\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}) if you need any
+more details.
 
 Yours Faithfully, \newline % Closing text
 \includegraphics[scale=0.6]{sgtrBlue} \newline 
