Modified Cover letter

--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -42,6 +42,7 @@ Southampton UK, SO14 3JG
 
 \phonefrom{+44 (0) 744 954 9630} % Phone number
 \emailfrom{rpereztorro@gmail.com} % Email address
+\newcommand{\linkedin}{\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}}
 
 %----------------------------------------------------------------------------------------
 %	ADDRESSEE AND GREETING/CLOSING
@@ -50,9 +51,10 @@ Southampton UK, SO14 3JG
 \greetto{Dear Sir or Madam,} % Greeting text
 
 
-\newcommand{\job}{Senior Aerodynamics CFD Engineer LMP1}
+\newcommand{\job}{CFD Engineer}
 \newcommand{\jobref}{}
-\newcommand{\jobweb}{Porsche careers' website}
+\newcommand{\jobweb}{ThinkFluid careers' website}
+
 
 \newcommand{\opng}[1]{
 		\IfEqCase{#1}{
@@ -73,13 +75,12 @@ Southampton UK, SO14 3JG
 \nameto{} % Addressee of the letter above the to address
 
 \addrto{
-Porsche Engineering Group GmbH \\
-Human Resources \\
-Porschestra{\ss}e \\
-71287 Weissach \\
-Germany
+THINKFLUID ENGINEERING S.r.l.\\
+Via M. Giuntini,\\
+56023 – Navacchio,\\
+Pisa, Italia
 \\
-Job reference: \textbf{\job}  
+Job reference: \textbf{\jobref\job}  
 }
 
 %----------------------------------------------------------------------------------------
@@ -92,7 +93,7 @@ Job reference: \textbf{\job}
 %----------------------------------------------------------------------------------------
 
 
-\opng{1} ``\job'' position recently posted on \jobweb.\clng{2}
+\opng{2} ``\job'' position recently posted on \jobweb.\clng{1}
 
 Having spent the past 4 years as a researcher in the field of Computational Fluid Dynamics
 has given me an extensive knowledge and expertise in the matter. On top of that, researching not
@@ -102,17 +103,19 @@ innovative solutions.
 
 I hope you noticed in my CV that I fulfil all the necessary requirements since I used
 extensively commercial CFD packages to analyse in the past and also have experience in
-developing CFD codes in Fortran90 as well as post-processing tools both in Java and
-Python. Additionally, as you can see in my CV, I also have experience in CAD surface
-modelling acquired through several projects. Amongst them I would like to highlight my
-work in the design of the Shell Eco-Marathon solar car, which you can see in my Linkedin
-profile (\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}).
+developing post-processing tools both in Java and Python. Additionally, I also have
+customer-service skills acquired through my experience in teaching. In particular I
+believe that my experience in helping students of different backgrounds to solve their
+respective CFD-related problems is really valuable to the position in question since I
+basically acted as a ``CFD consultant''.
 
 Finally, I would like to express that although the research experience has been very
-rewarding, I feel that due to my competitive character, I would much rather continue
-developing my career in the fast-paced and team-based working environment of a LMP1 team.
+rewarding, I would much rather continue developing my career in the fast-paced and
+team-based working environment of a young CFD consultancy company where I would be a wide
+variety of clients and projects.
 
-Thank you for your time and consideration and please feel free to contact me at any time
+Thank you for your time and consideration and please feel free to contact me at any time,
+or visit my Linkedin profile (\linkedin),
 if you need any more details.
 
 Yours Faithfully, \newline % Closing text
