Add wind-tunnel experience

--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -3,14 +3,13 @@
 \usepackage{graphicx,textcomp}
 \usepackage{lipsum} 
 
-
 \begin{document}
 
 \part{CFD/Aeronautical Engineer}{Rafael P\'erez}
 
 \section{Experience \& Projects}
 \begin{eventlist}
-\workitem{November 2013 -- Present}
+\eduitem{November 2013 -- Present}
      {University of Southampton}
      {Post-Graduate Researcher}
 
@@ -20,12 +19,11 @@ the aerodynamic performance
 	\itemsep -1pt
 	\item CFD code (\textbf{+10,000 lines}) development
 	\item Big-Data manipulation (\textbf{+1Tb datasets})
-	\item High Performance Computing\\ (\textbf{+8,000 cores using MPI})
-	\item High Quality Technical Reports (\textbf{1 Journal paper and 3 International
-	conferences})
+	\item High Performance Computing (\textbf{+8,000 cores})
+	\item High Quality Technical Reports
 \end{itemize}
 
-\workitem{November 2013 -- Present}
+\eduitem{November 2013 -- Present}
 	{University of Southampton}
 	{Assistant Lecturer}
 \begin{itemize}
@@ -36,7 +34,15 @@ the aerodynamic performance
 	\item Introducing new users to the CFD methodology
 \end{itemize}
 
-\workitem{September 2012 -- May 2013}
+\eduitem{November 2012}
+     {University of Southampton}
+     {F1 ride-height map}
+     \begin{itemize}
+	\itemsep -1pt
+     	\item Obtained ride height map from wind tunnel lift and drag measurements
+     \end{itemize}
+
+\eduitem{September 2012 -- May 2013}
      {University of Southampton}
      {Race Car Design Team}
 
@@ -47,7 +53,7 @@ CFD methodology leader for an open wheel Hill Climb Race car design project
      	\item CFD workflow automation \\(\textbf{enhanced productivity by +500\%})
      \end{itemize}
 
-\workitem{September 2011 -- July 2012}
+\eduitem{September 2011 -- July 2012}
      {University of Madrid}
      {Solar Car Prototype}
 
