--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -15,7 +15,7 @@
 }}
 \makeletterhead{Uiuc}{\Lheader{\usebox{\Luiuc}}}
 
-\newlfmP{sigsize=50pt} % Slightly decrease the height of the signature field
+\newlfmP{sigsize=2pt} % Slightly decrease the height of the signature field
 \newlfmP{addrfromphone} % Print a phone number under the sender's address
 \newlfmP{addrfromemail} % Print an email address under the sender's address
 \PhrPhone{Phone} % Customize the "Telephone" text
@@ -52,7 +52,7 @@ Southampton UK, SO14 3JG
 
 \newcommand{\job}{Aerodynamics Engineer}
 \newcommand{\jobref}{}
-\newcommand{\jobweb}{McLaren careers' website}
+\newcommand{\jobweb}{McLaren' careers website}
 
 \newcommand{\opng}[1]{
 		\IfEqCase{#1}{
@@ -112,7 +112,7 @@ Thank you for your time and consideration and please feel free to contact me at 
 if you need any more details.
 
 Yours Faithfully, \newline % Closing text
-\includegraphics[scale=0.6]{sgtrBlue} \newline 
+\includegraphics[scale=0.8]{sgtrBlue} \newline 
 Rafael P\'erez
 
 %----------------------------------------------------------------------------------------
