Updated f1 wind tunnel

--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -36,10 +36,11 @@ the aerodynamic performance
 
 \eduitem{November 2012}
      {University of Southampton}
-     {F1 ride-height map}
+     {F1 Wind Tunnel Testing}
      \begin{itemize}
 	\itemsep -1pt
-     	\item Obtained ride height map from wind tunnel lift and drag measurements
+     	\item Obtained ride-height map from wind tunnel lift and drag measurements
+     	\item Optimised front/rear wing downforce by angle of attack adjustment
      \end{itemize}
 
 \eduitem{September 2012 -- May 2013}
