--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -50,9 +50,9 @@ Southampton UK, SO14 3JG
 \greetto{Dear Sir or Madam,} % Greeting text
 
 
-\newcommand{\job}{Aerodynamics Engineer}
+\newcommand{\job}{PHD intership (CFD)}
 \newcommand{\jobref}{}
-\newcommand{\jobweb}{McLaren' careers website}
+\newcommand{\jobweb}{McLaren's careers website}
 
 \newcommand{\opng}[1]{
 		\IfEqCase{#1}{
@@ -65,8 +65,8 @@ Southampton UK, SO14 3JG
 		{1}{I hope that by the end of these lines you believe as strongly as I do, that
 		I am the right fit for the position in question due to the following reasons.}
 		{2}{Given the prestige of the company I imagine you would have received
-		piles of applications. However, I believe my knowdlege and experience can
-		stand out amongst the rest.}
+		piles of applications. However, I believe my experience, knowdlege and
+		ambition can stand out amongst the rest.}
 		}
 		}
 
@@ -91,12 +91,19 @@ Job reference: \textbf{\job}
 %----------------------------------------------------------------------------------------
 
 
-\opng{2} ``\job'' position recently posted on \jobweb.\clng{2}
+\opng{2} ``\job'' position in any of the slots available that has recently been posted on
+\jobweb.\clng{2}
 
-Having spent the past 4 years as a researcher in the field of Computational Fluid Dynamics
-has given me an extensive knowledge and expertise in the matter. On top of that, researching not
-only has strengthened my background but also my creativity and scientific capabilities.
-As a researcher I am used to deal with problems that need imaginative and
+Ever since I left my home country I have been pursuing a career in motorsports. My first
+step was to take a masters programme that gave me the specialisation and knowledge needed
+to take a CFD position in a F1 team. During that course I gained experience in the
+external aerodynamics of an open-wheel race car using CFD and wind tunnel tools. 
+
+Later on I took a position in Southampton University where I have spent the last 3 years
+as a researcher in the field of Computational Fluid Dynamics which has given me an
+extensive knowledge and expertise in the matter. On top of that, researching not only has
+strengthened my background but also my creativity and scientific capabilities. I am now
+a person that is capable of dealing with complex problems that need imaginative and
 innovative solutions.
 
 Additionally, as you can see in my CV, I also have experience in CAD surface modelling
@@ -104,15 +111,15 @@ acquired through several projects. Amongst them I would like to highlight my wor
 design of the Shell Eco-Marathon solar car, which you can see in my Linkedin profile
 (\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}).
 
-Finally, I would like to express that although the research experience has been very
-rewarding, I feel that due to my competitive character, I would much rather continue
-developing my career in the fast-paced and team-based working environment of a F1 team.
+Finally, I would like to emphasise that you can expect from me someone that will be an
+active asset for the team and will try to learn the most out of this
+unique experience from first to last day.
 
-Thank you for your time and consideration and please feel free to contact me at any time
-if you need any more details.
+Thank you for your time and consideration and would please feel free to contact me at any time
+if you need any more details. I am looking forward to your reply.
 
 Yours Faithfully, \newline % Closing text
-\includegraphics[scale=0.8]{sgtrBlue} \newline 
+\includegraphics[scale=0.7]{sgtrBlue} \newline 
 Rafael P\'erez
 
 %----------------------------------------------------------------------------------------
