--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -115,7 +115,7 @@ Finally, I would like to emphasise that you can expect from me someone that will
 active asset for the team and will try to learn the most out of this
 unique experience from first to last day.
 
-Thank you for your time and consideration and would please feel free to contact me at any time
+Thank you for your time and consideration and please feel free to contact me at any time
 if you need any more details. I am looking forward to your reply.
 
 Yours Faithfully, \newline % Closing text
