--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -3,57 +3,66 @@
 \usepackage{graphicx,textcomp}
 \usepackage{lipsum} 
 
-
 \begin{document}
 
 \part{CFD/Aeronautical Engineer}{Rafael P\'erez}
 
 \section{Experience \& Projects}
 \begin{eventlist}
-\workitem{November 2013 -- Present}
+\eduitem{November 2013 -- Present}
      {University of Southampton}
      {Post-Graduate Researcher}
 
 Investigate the effect of wing shape modifications on
 the aerodynamic performance
 \begin{itemize}
-	\itemsep -1pt
+	\itemsep -2pt
 	\item CFD code (\textbf{+10,000 lines}) development
 	\item Big-Data manipulation (\textbf{+1Tb datasets})
-	\item High Performance Computing\\ (\textbf{+8,000 cores using MPI})
-	\item High Quality Technical Reports (\textbf{1 Journal paper and 3 International
-	conferences})
+	\item High Performance Computing (\textbf{+8,000 cores})
+	\item High Quality Technical Reports
+	\item \textbf{Best Oral Presentation} in 2016 UKTC Annual Review
 \end{itemize}
 
-\workitem{November 2013 -- Present}
+\eduitem{November 2013 -- Present}
 	{University of Southampton}
 	{Assistant Lecturer}
 \begin{itemize}
-	\itemsep -1pt
+	\itemsep -2pt
 	\item Teaching Aerodynamics \& Computational Fluid Dynamics (\textbf{+30 Students})
-	\item Teaching Ansys Fluent \& Star CCM+
-	\item Problem Solving for multiple CFD applications
+	\item Teaching Commercial CFD software for a wide range of applications
 	\item Introducing new users to the CFD methodology
 \end{itemize}
 
-\workitem{September 2012 -- May 2013}
+\eduitem{November 2012}
+     {University of Southampton}
+     {F1 Wind Tunnel Testing}
+     \begin{itemize}
+	\itemsep -2pt
+     	\item Obtained ride-height map from \textbf{wind tunnel} lift and drag measurements
+     	\item Optimised front/rear wing downforce by angle of attack adjustment
+     \end{itemize}
+
+\eduitem{September 2012 -- May 2013}
      {University of Southampton}
      {Race Car Design Team}
 
 CFD methodology leader for an open wheel Hill Climb Race car design project
      \begin{itemize}
-	\itemsep -1pt
+	\itemsep -2pt
      	\item Obtained \textbf{33\% efficiency} improvement
-     	\item Process automation \\(\textbf{enhanced productivity by +500\%})
+     	\item CFD workflow automation \\(\textbf{enhanced productivity by +500\%})
      \end{itemize}
 
-\workitem{September 2011 -- July 2012}
+\eduitem{September 2011 -- July 2012}
      {University of Madrid}
      {Solar Car Prototype}
 
-Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.com/global/environment-society/ecomarathon.html}{Shell Eco-Marathon}
+Aero \& CAD leader for a
+\href{http://www.shell.com/global/environment-society/ecomarathon.html}{Shell
+Eco-Marathon} team
 \begin{itemize}
-\itemsep -1pt
+\itemsep -2pt
 	\item Created full CAD model within competition \\constraints
 	\item \textbf{\texttildelow 30\% Drag Reduction} by full aerodynamic \\analysis
 \end{itemize}
@@ -91,7 +100,7 @@ Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.c
      	{University of Southampton (UK)}
      	{PhD -- \normalsize{LES of Wavy Leading Edge Aerofoils}} 
 	\begin{itemize}
-	\itemsep -1pt
+	\itemsep -2pt
 		\item Technical Writing
 		\item Advanced Computational Methods
 		\item Aeroacoustics
@@ -101,7 +110,7 @@ Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.c
      	{University of Southampton (UK)}
      	{MSc -- Race Car Aerodynamics -- 1:1} 
   	\begin{itemize}
-	\itemsep -1pt
+	\itemsep -2pt
 	   \item Design of an Open Wheel Race Car
 	   \item CFD Modelling
 	   \item Design Search \& Optimisation
@@ -112,7 +121,7 @@ Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.c
 	{UPM Madrid (SPAIN)}
 	{BEng -- Aeronautical Engineer -- 2:1}
   	\begin{itemize}
-	\itemsep -1pt
+	\itemsep -2pt
 	   \item Aerodynamics
 	   \item Structural Analysis
 	   \item Aerospace Maintenance
@@ -122,7 +131,7 @@ Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.c
 \vspace{-20pt}
 \section{More about me} 
 \begin{itemize}
-	\itemsep -1pt
+	\itemsep -2pt
 	\item Full driving license
 	\item Working hours flexibility
 	\item Willing to travel
