--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -66,7 +66,7 @@ Southampton UK, SO14 3JG
 		{1}{I hope that by the end of these lines you believe as strongly as I do, that
 		I am the right fit for the position in question due to the following reasons.}
 		{2}{Given the prestige of the company I imagine you would have received
-		piles of applications. However, I believe my experience, knowdlege and
+		piles of applications. However, I believe my experience, knowledge and
 		ambition can stand out amongst the rest.}
 		}
 		}
