--- a/tccv.cls
+++ b/tccv.cls
@@ -96,10 +96,9 @@
 	\begin{minipage}[c]{0.8\textwidth}
 	\bigskip
 	\section{About me}
-	Aeronautical engineer with excellent problem-solving skills acquired through 3
-	years in the research field seeks for position that enables career development
-	within industry. Has highly transferable skills that any technical/IT/engineering
-	position can benefit from. Currently resides in UK but happy to move if required.
+	Aeronautical engineer with excellent problem-solving skills and +3 years
+	experience using high fidelity CFD, is confident using CAD software and
+	writing scripts in several programming languages.  
 	\end{minipage}
 	\bigskip
 	\rule{0.8\textwidth}{0.4pt}
