--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -10,30 +10,28 @@
 
 \section{Experience \& Projects}
 \begin{eventlist}
-\workitem{November 2013 -- Present}
+\workitem{November 2013 -- February 2017}
      {University of Southampton}
      {Post-Graduate Researcher}
 
 Investigate the effect of wing shape modifications on
-the aerodynamic performance
+the aerodynamic performance with experience in:
 \begin{itemize}
 	\itemsep -1pt
-	\item CFD code (\textbf{+10,000 lines}) development
-	\item Big-Data manipulation (\textbf{+1Tb datasets})
-	\item High Performance Computing\\ (\textbf{+8,000 cores using MPI})
-	\item High Quality Technical Reports (\textbf{1 Journal paper and 3 International
-	conferences})
+	\item CFD solver and post-processing tools (\textbf{Python and Fortran}) development
+	\item High Performance Computing
+	\item High Quality Technical Reports and Presentations
 \end{itemize}
 
-\workitem{November 2013 -- Present}
+\workitem{November 2013 -- November 2016}
 	{University of Southampton}
 	{Assistant Lecturer}
 \begin{itemize}
 	\itemsep -1pt
-	\item Teaching Aerodynamics \& Computational Fluid Dynamics (\textbf{+30 Students})
-	\item Teaching Ansys Fluent \& Star CCM+
-	\item Problem Solving for multiple CFD applications
-	\item Introducing new users to the CFD methodology
+	\item Aerodynamics \& Computational Fluid Dynamics (\textbf{Ansys Fluent \& Star
+	CCM+})
+	\item Problem Solving/Consulting for multiple CFD applications
+	\item Wind Tunnel Testing
 \end{itemize}
 
 \workitem{September 2012 -- May 2013}
@@ -44,11 +42,12 @@ CFD methodology leader for an open wheel Hill Climb Race car design project
      \begin{itemize}
 	\itemsep -1pt
      	\item Obtained \textbf{33\% efficiency} improvement
-     	\item CFD workflow automation \\(\textbf{enhanced productivity by +500\%})
+     	\item CFD workflow automation using Java and Star-CCM+(\textbf{+500\% productivity})
+	\item Cleaning and Meshing CAD geometry
      \end{itemize}
 
 \workitem{September 2011 -- July 2012}
-     {University of Madrid}
+     {University of Madrid (UPM)}
      {Solar Car Prototype}
 
 Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.com/global/environment-society/ecomarathon.html}{Shell Eco-Marathon}
@@ -87,37 +86,31 @@ Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.c
 \vspace{-20pt}
 \section{Education}
 \begin{eventlist}
-\eduitem{2013 -- 2016}
+\eduitem{2013 -- 2017}
      	{University of Southampton (UK)}
-     	{PhD -- \normalsize{LES of Wavy Leading Edge Aerofoils}} 
-	\begin{itemize}
-	\itemsep -1pt
-		\item Technical Writing
-		\item Advanced Computational Methods
-		\item Aeroacoustics
-	\end{itemize}
+     	{PhD -- \normalsize{Computational Fluid Dynamics \& Aerodynamics}} \\
 
 \eduitem{2012 -- 2013}
      	{University of Southampton (UK)}
      	{MSc -- Race Car Aerodynamics -- 1:1} 
   	\begin{itemize}
 	\itemsep -1pt
-	   \item Design of an Open Wheel Race Car
-	   \item CFD Modelling
+	   \item Race Car Design (Wind Tunnel \& CFD)
 	   \item Design Search \& Optimisation
-	   \item Wind Tunnel Testing
 	\end{itemize}
 
 \eduitem{2007 -- 2012}
 	{UPM Madrid (SPAIN)}
-	{BEng -- Aeronautical Engineer -- 2:1}
-  	\begin{itemize}
-	\itemsep -1pt
-	   \item Aerodynamics
-	   \item Structural Analysis
-	   \item Aerospace Maintenance
-	\end{itemize}
+	{BEng -- Aeronautical Engineer -- 2:1 (71\%)}
 \end{eventlist}
+
+\vspace{-35pt}
+\section{Publications and Conferences} 
+\textbf{A large-eddy simulation on a deep-stalled aerofoil with a wavy leading edge}. J. Fluid Mech. 813.\\
+\textbf{Flow characteristics of deep stalled aerofoils with a wavy
+leading edge.} UK Fluids Conference, September 2016, London. \\
+\textbf{Large-eddy simulations of a stalled NACA0021 with a wavy
+leading edge.} UKTC Annual Meeting, September 2016, Cambridge.
 
 \vspace{-20pt}
 \section{More about me} 
