--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -59,7 +59,7 @@ Aero \& CAD leader for a
 Eco-Marathon} team
 \begin{itemize}
 \itemsep -2pt
-	\item Prototipe car modeling (Catia V5)
+	\item Prototype car modelling (Catia V5)
 	\item \textbf{\texttildelow 30\% Drag Reduction} (Ansys Fluent)
 \end{itemize}
 \end{eventlist}
@@ -121,7 +121,7 @@ leading edge}. UKTC Annual Meeting, September 2016, Cambridge (UK).
 \section{Awards and Certificates} 
   	\begin{itemize}
 	\itemsep -2pt
-	\item The Timoty Nickels Prize for best oral presentation on 2016 UKTC Annual Meeting
+	\item The Timothy Nickels Prize for best oral presentation on 2016 UKTC Annual Meeting
 	\item Star-CCM+ 3 Days Course at London HQ
 	\item 300h Catia V5 Course
 	\end{itemize}
