Translate into spanish

--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -59,8 +59,8 @@ Aero \& CAD leader for a
 Eco-Marathon} team
 \begin{itemize}
 \itemsep -2pt
-	\item Prototype car modelling (Catia V5)
-	\item \textbf{\texttildelow 30\% Drag Reduction} (Ansys Fluent)
+	\item Prototype car modelling (\textbf{CatiaV5})
+	\item \textbf{\texttildelow 30\% Drag Reduction} (\textbf{Ansys Fluent})
 \end{itemize}
 \end{eventlist}
 
