Add spanish cover letter

--- a/RPerezTorro_esp.tex
+++ b/RPerezTorro_esp.tex
@@ -16,20 +16,20 @@
 Investigar el efecto de modificaciones en la forma de alas sobre la eficiencia aerodin\'amica
 \begin{itemize}
 	\itemsep -2pt
-	\item Desarrollo de software para solucion y \\post-procesado de CFD (\textbf{Python \& Fortran})
-	\item Experiencia en computacion de alto rendimiento
+	\item Desarrollo de software para soluci\'on y \\post-procesado de CFD (\textbf{Python \& Fortran})
+	\item Experiencia en computaci\'on de alto rendimiento
 	\item Publicaciones en revistas de prestigio
-	\item Participaciz\'on en conferencias internacionales
+	\item Participaci\'on en conferencias internacionales
 \end{itemize}
 
 \eduitem{Nov 2013 -- Dec 2016 $|$ Univ. of Southampton}{}
 	{Profesor Asistente}
 \begin{itemize}
 	\itemsep -2pt
-	\item Aerodinamica \& Fluido Dinamica Computacional (\textbf{Ansys Fluent \& Star
+	\item Aerodin\'amica \& Fluido Din\'amica Computacional (\textbf{Ansys Fluent \& Star
 	CCM+})
 	\item Soluci\'on de problemas para m\'ultiples aplicaciones CFD 
-	\item Experimentos en tunel de viento
+	\item Experimentos en t\'unel de viento
 \end{itemize}
 
 %\eduitem{Nov 2012 $|$ Univ. of Southampton}{}
@@ -48,7 +48,7 @@ Jefe de metodolog\'ia CFD
 	\itemsep -2pt
 	\item Elecci\'on de condiciones de contorno, modelo de turbulencia y tipo de mallado
      	\item Mejora de \textbf{33\%} en \textbf{eficiencia}
-     	\item Incremento de productividad de \textbf{+500\%} mediante codigos de automatizaci\'on (\textbf{Java, Matlab, SolidWorks \& Star-CCM+})
+     	\item Incremento de productividad de \textbf{+500\%} mediante c\'odigos de automatizaci\'on (\textbf{Java, Matlab, SolidWorks \& Star-CCM+})
 	\item Limpiado y mallado de geometr\'ia 3D
      \end{itemize}
 
@@ -70,7 +70,7 @@ Eco-Marathon}
 \begin{factlist}
 \item{Nativo}{Espa\~{n}ol, Catal\'an}
 \item{Excelente}{Ingl\'es}
-\item{Basico}{Franc\'es}
+\item{B\'asico}{Franc\'es}
 \end{factlist}
 
 \vspace{-20pt}
@@ -95,15 +95,15 @@ Eco-Marathon}
 \section{Educaci\'on}
 \begin{eventlist}
 \eduitem{2013 -- 2017 $|$ University of Southampton (UK)}{}
-     	{\normalsize{PhD -- CFD \& Aerodynamics}} \\
+     	{\normalsize{Doctorado -- CFD \& Aerodynamics}} \\
 
 \vspace{-8pt}
 \eduitem{2012 -- 2013 $|$ University of Southampton (UK)}{}
-     	{\normalsize{MSc -- Race Car Aerodynamics -- 1:1}} \\
+     	{\normalsize{M\'aster -- Race Car Aerodynamics -- 1:1}} \\
 
 \vspace{-8pt}
 \eduitem{2007 -- 2012 $|$ UPM Madrid (SPAIN)}{}
-	{\normalsize{BEng -- Ingeniero T\'ecnico Aeron\'autico -- 2:1 (71\%)}}
+	{\normalsize{Ingeniero T\'ecnico Aeron\'autico -- 2:1 (71\%)}}
 \end{eventlist}
 
 \vspace{-25pt}
