--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -17,9 +17,9 @@ Investigate the effect of wing shape modifications on
 the aerodynamic performance
 \begin{itemize}
 	\itemsep -2pt
-	\item CFD solver and post-processing tools (\textbf{Python \& Fortran}) development
+	\item CFD solver \& post-processing tools development (\textbf{Python \& Fortran}) 
 	\item High Performance Computing
-	\item High Quality Technical Reports and Presentations
+	\item High Quality Technical Reports \& Presentations
 \end{itemize}
 
 \eduitem{Nov 2013 -- Dec 2016 $|$ Univ. of Southampton}{}
@@ -47,8 +47,8 @@ CFD methodology leader for an open wheel Hill Climb Race car design project
      \begin{itemize}
 	\itemsep -2pt
      	\item Obtained \textbf{33\% efficiency} improvement
-     	\item CFD workflow automation using Java and Star-CCM+(\textbf{+500\% productivity})
-	\item Cleaning and Meshing CAD geometry
+     	\item CFD workflow automation using Java \& Star-CCM+(\textbf{+500\% productivity})
+	\item Cleaning \& Meshing CAD geometry
      \end{itemize}
 
 \eduitem{Sep 2011 -- Jul 2012 $|$ UPM Madrid (Spain)}{}
@@ -106,7 +106,7 @@ Eco-Marathon} team
 \end{eventlist}
 
 \vspace{-25pt}
-\section{Publications and Conferences} 
+\section{Publications \& Conferences} 
   	\begin{itemize}
 	\itemsep -2pt
 \item \textbf{A large-eddy simulation on a deep-stalled aerofoil with a wavy leading edge}. J. Fluid Mech. 813. \href{https://doi.org/10.1017/jfm.2016.841}{doi: 10.1017/jfm.2016.841}.
@@ -118,7 +118,7 @@ leading edge}. UKTC Annual Meeting, September 2016, Cambridge (UK).
 	\end{itemize}
 
 \vspace{-25pt}
-\section{Awards and Certificates} 
+\section{Awards \& Certificates} 
   	\begin{itemize}
 	\itemsep -2pt
 	\item The Timothy Nickels Prize for best oral presentation on 2016 UKTC Annual Meeting
