--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -5,6 +5,7 @@
 
 \usepackage{charter} % Use the Charter font for the document text
 \usepackage{hyperref} 
+\usepackage{xstring} 
 \hypersetup{colorlinks,breaklinks,urlcolor=blue,linkcolor=blue}
 
 
@@ -14,7 +15,7 @@
 }}
 \makeletterhead{Uiuc}{\Lheader{\usebox{\Luiuc}}}
 
-\newlfmP{sigsize=50pt} % Slightly decrease the height of the signature field
+\newlfmP{sigsize=0pt} % Slightly decrease the height of the signature field
 \newlfmP{addrfromphone} % Print a phone number under the sender's address
 \newlfmP{addrfromemail} % Print an email address under the sender's address
 \PhrPhone{Phone} % Customize the "Telephone" text
@@ -34,7 +35,8 @@
 %\namefrom{Rafael P\'erez} % Name
 
 \addrfrom{
-\today\\[12pt] % Date
+%\vspace{-15pt}
+\today\\ % Date
 238 Oceana Boulevard \\ % Address
 Southampton UK, SO14 3JG
 }
@@ -53,7 +55,23 @@ Southampton UK, SO14 3JG
 \newcommand{\jobref}{}
 \newcommand{\jobweb}{McLaren careers' website}
 
-\nameto{} % Addressee of the letter above the to address
+\newcommand{\opng}[1]{
+		\IfEqCase{#1}{
+		{1}{I was excited to read about the }
+		{2}{I am writing to express my strong interest in the }
+		}
+		}
+\newcommand{\clng}[1]{
+		\IfEqCase{#1}{
+		{1}{I hope that by the end of these lines you believe as strongly as I do, that
+		I am the right fit for the position in question due to the following reasons.}
+		{2}{Given the prestige of the company I imagine you would have received
+		piles of applications. However, I believe my experience, knowledge and
+		ambition can stand out amongst the rest.}
+		}
+		}
+
+%\nameto{} % Addressee of the letter above the to address
 
 \addrto{
 McLaren Technology Centre\\
@@ -74,32 +92,37 @@ Job reference: \textbf{\job}
 %----------------------------------------------------------------------------------------
 
 
-I was excited to read about the ``\job'' position recently posted on \jobweb.
-I hope that by the end of these lines you believe as strongly as I do, that I am the
-right fit for the position in question due to the following reasons.
+\opng{2} ``\job'' position that has recently been posted on
+\jobweb.\clng{1}
 
-In F1 aerodynamics, managing vortical flow structures is capital. As a post-graduate
-researcher at University of Southampton I have spent the past 4 years analysing in depth
-flows of such nature. My work is about wings with an undulated leading edge, which I
-believe have been used in the past in the rear wing section of the MP4-29 to reduce drag.
-I believe that I could bring in valuable knowledge in this matter given that I have
-dedicated countless hours to its investigation.
+Ever since I left my home country I have been pursuing a career in motorsports. My first
+step was to take a masters programme that gave me the specialisation and knowledge needed
+to take a CFD position in the motor racing industry. During that course I gained experience in the
+external aerodynamics of an open-wheel race car using CFD and wind tunnel tools. I particularly
+became very efficient in preparing geometries for CFD since I was responsible for the
+pre-processing department of the group.
 
-I hope you noticed in my CV that I fulfil all the necessary requirements since I used
-extensively commercial CFD packages to analyse in the past and also have experience in developing CFD
-codes in Fortran90 as well as post-processing tools both in Java and Python.
+Later on I took a position in Southampton University where I have spent the last 3 years
+as a researcher in the field of Computational Fluid Dynamics which has given me an
+extensive knowledge and expertise in the matter. On top of that, researching not only has
+strengthened my background but also my creativity and scientific capabilities. I am now
+a person that is capable of dealing with complex problems that need imaginative and
+innovative solutions.
 
-Finally I would like to express that although the research experience has been very
-rewarding, I feel that due to my competitive character, I would much rather continue
-developing my career in the fast-paced and team-based working environment of a F1 team.
+Additionally, as you can see in my CV, I also have experience in CAD surface modelling
+acquired through several projects. Amongst them I would like to highlight my work in the
+design of the Shell Eco-Marathon solar car, which you can see in my Linkedin profile
+(\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}). I believe that CAD is also paramount for a CFD engineer given the strong relationship between CFD and CAD departments.
 
-Thank you for your time and consideration and please feel free to contact me at any time,
-or visit my linkedin profile
-(\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}) if you need any
-more details.
+Finally, I would like to emphasise that you can expect from me someone that will be an
+active asset for the company and will try to learn the most out of this
+unique experience from first to last day.
+
+Thank you for your time and consideration and please feel free to contact me at any time
+if you need any more details. I am looking forward to your reply.
 
 Yours Faithfully, \newline % Closing text
-\includegraphics[scale=0.6]{sgtrBlue} \newline 
+\includegraphics[scale=0.7]{sgtrBlue} \newline 
 Rafael P\'erez
 
 %----------------------------------------------------------------------------------------
