Add dot afer Sra

--- a/RPerezTorro_CoverLetter_esp.tex
+++ b/RPerezTorro_CoverLetter_esp.tex
@@ -48,7 +48,7 @@ Southampton UK, SO14 3JG
 %	ADDRESSEE AND GREETING/CLOSING
 %----------------------------------------------------------------------------------------
 
-\greetto{Estimado Sr. o Sra,} % Greeting text
+\greetto{Estimado Sr. o Sra.,} % Greeting text
 
 
 \newcommand{\job}{Ingeniero Aerodin\'amica}
