Update cover letters

--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -19,6 +19,8 @@ the aerodynamic performance
 	\itemsep -2pt
 	\item CFD solver \& post-processing tools development (\textbf{Python \& Fortran}) 
 	\item High Performance Computing
+	\item High Speed Aerodynamics
+	\item Compressible flow
 	\item High Quality Technical Reports \& Presentations
 \end{itemize}
 
