--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -51,9 +51,9 @@ Southampton UK, SO14 3JG
 \greetto{Dear Sir or Madam,} % Greeting text
 
 
-\newcommand{\job}{CFD R\&D Engineer}
-\newcommand{\jobref}{}
-\newcommand{\jobweb}{McLaren careers' website}
+\newcommand{\job}{Turbine Aerothermal Engineer}
+\newcommand{\jobref}{JR6016038}
+\newcommand{\jobweb}{Rolls-Royce careers' website}
 
 \newcommand{\opng}[1]{
 		\IfEqCase{#1}{
@@ -63,8 +63,9 @@ Southampton UK, SO14 3JG
 		}
 \newcommand{\clng}[1]{
 		\IfEqCase{#1}{
-		{1}{I hope that by the end of these lines you believe as strongly as I do, that
-		I am the right fit for the position in question due to the following reasons.}
+		{1}{I hope that by the end of this letter you believe as strongly as I do,
+		that I am the right fit for the position in question for the following
+		reasons:}
 		{2}{Given the prestige of the company I imagine you would have received
 		piles of applications. However, I believe my experience, knowledge and
 		ambition can stand out amongst the rest.}
@@ -74,10 +75,8 @@ Southampton UK, SO14 3JG
 %\nameto{} % Addressee of the letter above the to address
 
 \addrto{
-McLaren Technology Centre\\
-Chertsey Road,
-Woking (Surrey),\\
-GU21 4YH (UK)\\
+Rolls-Royce HR department,\\
+Derby (UK)\\
 \\
 Job reference: \textbf{\job}  
 }
@@ -95,31 +94,24 @@ Job reference: \textbf{\job}
 \opng{2} ``\job'' position that has recently been posted on
 \jobweb.\clng{1}
 
-Ever since I left my home country I have been pursuing a career in motorsports. My first
-step was to take a masters programme that gave me the specialisation and knowledge needed
-to take a CFD position in the motor racing industry. During that course I gained experience in the
-external aerodynamics of an open-wheel race car using CFD and wind tunnel tools. I particularly
-became very efficient in preparing geometries for CFD since I was responsible for the
-pre-processing department of the group.
+Ever since I left my home country I have been pursuing a career in aerodynamics,
+especially in Computational Fluid Dynamics. My first step was to take a masters programme
+that gave me the specialisation and knowledge needed to take a CFD position in industry.
+During that course I gained experience in aerodynamics, turbulence, wind tunnel testing,
+numerical methods and many other.
 
-Later on I took a position in Southampton University where I have spent the last 3 years
-as a researcher in the field of Computational Fluid Dynamics which has given me an
-extensive knowledge and expertise in the matter. On top of that, researching not only has
-strengthened my background but also my creativity and scientific capabilities. I am now
-a person that is capable of dealing with complex problems that need imaginative and
-innovative solutions.
+Later on I took a position at Southampton University where I have spent the last 3 years
+as a researcher in the field of Computational Fluid Dynamics through which I have
+acquired an extensive knowledge and expertise in the matter. I have also become very
+confident at writing technical reports and giving presentations in front of wide audiences
+as you can seen in the Publications and Conferences section of my CV.
 
-Additionally, as you can see in my CV, I also have experience in CAD surface modelling
-acquired through several projects. Amongst them I would like to highlight my work in the
-design of the Shell Eco-Marathon solar car, which you can see in my Linkedin profile
-(\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt}). I believe that CAD is also paramount for a CFD engineer given the strong relationship between CFD and CAD departments.
-
-Finally, I would like to emphasise that you can expect from me someone that will be an
-active asset for the company and will try to learn the most out of this
-unique experience from first to last day.
+On top of that, researching not only has strengthened my background but also my creativity
+and scientific capabilities. I am now a person that is capable of dealing with complex
+problems that need imaginative and innovative solutions.
 
 Thank you for your time and consideration and please feel free to contact me at any time
-if you need any more details. I am looking forward to your reply.
+if you need any more details. I look forward to your reply.
 
 Yours Faithfully, \newline % Closing text
 \includegraphics[scale=0.7]{sgtrBlue} \newline 
