--- a/RPerezTorro_CoverLetter_esp.tex
+++ b/RPerezTorro_CoverLetter_esp.tex
@@ -91,7 +91,7 @@ Referencia: \textbf{\jobref}
 \opng{2} ``\job'' que ha sido recientemente publicado en
 \jobweb.\clng{2}
 
-En primer lugar, como habr\'a podido comprobar en mi curricu\'um, en los \'ultimos a\~{n}os he estado involucrado de manera ininterrumpida en proyectos de dise\~{n}o que requer\'ian de un alto nivel de an\'alisis del comportamiento aerodin\'amico de las geometr\'ias en cuesti\'on. Buena prueba de esto es la reciente publicac\'ion en Journal of Fluid Mechanics.
+En primer lugar, como habr\'a podido comprobar en mi curr\'iculum, en los \'ultimos a\~{n}os he estado involucrado de manera ininterrumpida en proyectos de dise\~{n}o que requer\'ian de un alto nivel de an\'alisis del comportamiento aerodin\'amico de las geometr\'ias en cuesti\'on. Buena prueba de esto es la reciente publicaci\'on en Journal of Fluid Mechanics.
 
 Pero adem\'as de la mera aplicaci\'on, el haber trabajado con c\'odigos desarrollados internamente en la Universidad de Southampton me ha permitido conocer internamente los entresijos de las simulaciones y modelos aerodin\'amicos. Este hecho me diferencia del usuario medio, permiti\'endome detectar problemas con antelaci\'on y buscar soluciones alternativas. De hecho, tamb\'ien he ejercido como profesor impartiendo clases pr\'acticas de din\'amica de fluidos computacional en las cuales una de mis tareas principales era guiar y resolver problemas para los proyectos de fin de carrera de los alumnos.
 
