--- a/RPerezTorro_CoverLetter_esp.tex
+++ b/RPerezTorro_CoverLetter_esp.tex
@@ -51,9 +51,9 @@ Southampton UK, SO14 3JG
 \greetto{Estimado Sr. o Sra.,} % Greeting text
 
 
-\newcommand{\job}{Ingeniero Aerodin\'amica}
-\newcommand{\jobref}{HTC17014}
-\newcommand{\jobweb}{el portal de empleo de Sogeti High-Tech}
+\newcommand{\job}{PostDoc CFD}
+\newcommand{\jobref}{BECDOCCFD-17-558}
+\newcommand{\jobweb}{el portal de empleo de ITAINNOVA}
 
 \newcommand{\opng}[1]{
 		\IfEqCase{#1}{
@@ -63,17 +63,16 @@ Southampton UK, SO14 3JG
 		}
 \newcommand{\clng}[1]{
 		\IfEqCase{#1}{
-		{1}{Espero que leyendo estas l\'ineas pueda ud. tener una convicci\'on tan firme como la que yo tengo de que mi perfil laboral es id\'oneo para el puesto en cuesti\'on por las siguientes razones:}
+		{1}{Espero que leyendo estas l\'ineas pueda ud. tener una convicci\'on tan firme como la que yo tengo de que mi perfil como investigador es id\'oneo para el puesto en cuesti\'on por las siguientes razones:}
 		{2}{Dado el prestigio de su compa\~{n}ia me imagino que habr\'an recibido numerosas solicitudes de empleo. Sin embargo, pienso que mi experiencia, conocimiento y ambici\'on podr\'an convencerle para que apueste por m\'i por las razones que siguen:}
 		}}
 
 %\nameto{} % Addressee of the letter above the to address
 
 \addrto{
-Sogeti High-Tech,\\
-Avda. Leonardo da Vinci 15,\\
-Getafe (Madrid),\\
-28906 (SPAIN)\\
+ITAINNOVA,\\
+C/ María de Luna, nº 7.\\
+50018 Zaragoza (SPAIN)\\
 \\
 Referencia: \textbf{\jobref}  
 }
@@ -89,14 +88,13 @@ Referencia: \textbf{\jobref}
 
 
 \opng{2} ``\job'' que ha sido recientemente publicado en
-\jobweb.\clng{2}
+\jobweb.\clng{1}
 
 En primer lugar, como habr\'a podido comprobar en mi curr\'iculum, en los \'ultimos a\~{n}os he estado involucrado de manera ininterrumpida en proyectos de dise\~{n}o que requer\'ian de un alto nivel de an\'alisis del comportamiento aerodin\'amico de las geometr\'ias en cuesti\'on. Buena prueba de esto es la reciente publicaci\'on en Journal of Fluid Mechanics.
 
-Pero adem\'as de la mera aplicaci\'on, el haber trabajado con c\'odigos desarrollados internamente en la Universidad de Southampton me ha permitido conocer internamente los entresijos de las simulaciones y modelos aerodin\'amicos. Este hecho me diferencia del usuario medio, permiti\'endome detectar problemas con antelaci\'on y buscar soluciones alternativas. De hecho, tamb\'ien he ejercido como profesor impartiendo clases pr\'acticas de din\'amica de fluidos computacional en las cuales una de mis tareas principales era guiar y resolver problemas para los proyectos de fin de carrera de los alumnos.
+Pero adem\'as de la mera aplicaci\'on, el haber trabajado con c\'odigos desarrollados internamente en la Universidad de Southampton me ha permitido conocer en profundidad los entresijos de las simulaciones y modelos aerodin\'amicos. Este hecho me diferencia del usuario medio, permiti\'endome detectar problemas con antelaci\'on y buscar soluciones alternativas. De hecho, tambi\'en he ejercido como profesor impartiendo clases pr\'acticas de din\'amica de fluidos computacional en las cuales una de mis tareas principales era guiar y resolver problemas para los proyectos de fin de carrera de los alumnos.
 
-Dado que el proyecto que ud. propone pondr\'ia en pr\'actica todos los conocimientos que he ido adquiriendo durante mi carrera, trabajar para Sogeti High-Tech como ingeniero aerod\'inamico me har\'ia sentir completamente realizado y motivado. 
-
+El proyecto que ud. propone pondr\'ia en pr\'actica todos los conocimientos que he ido adquiriendo durante mi carrera, adem\'as de brindarme una excelente oportunidad para ampliar mi conocimento al \'ambito de las simulaciones multif\'isicas. Por lo tanto, este puesto de investigador de postdoctorado me har\'ia sentir completamente realizado y motivado. 
 
 Espero haberle convencido y sepa que estoy dispuesto a visitarle personalmente durante cualquier d\'ia de la semana para realizar cualquier tipo de prueba o entrevista personal. Muchas gracias por su tiempo y por favor, no dude en ponerse en contacto conmigo si necesita m\'as detalles. 
 
